fix board layout on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -71,7 +71,15 @@ body {
 #board {
     width: 100%;
     max-width: 500px;
-    padding: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+#board-container {
+    width: 100%;
+    max-width: 500px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .highlight-opponent {
@@ -84,7 +92,6 @@ body {
   padding: 0;
   margin: 0;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
